Video player style epilogue buttons.
Puts glyphicon-based buttons in a bar along the bottom. A separate div along the left edge allows going backwards.

The home (previously "Reset?") button is always enabled and visible.

The bar is hidden when moved away from, except for the first three seconds at the start, at the end, and when debug mode is active.

Backward and forward are disabled until the epilogue is loaded.

The buttons are scaled differently than everything else - only based on windows height.

Also fixes the bug that the keyboard handler for the epilogue screen isn't detached on leaving said screen.

--- a/index.html
+++ b/index.html
@@ -3180,29 +3180,31 @@
                 <div id="epilogue-progress">0%</div>
             </div>
         </div>
-        <div id='epilogue-buttons'>
-            <button type="button" id='epilogue-next' data-action="next" class="bordered smooth-button">
-                Next
-            </button>
-            <button type="button" id='epilogue-previous' data-action="prev" class="bordered smooth-button">
-                Previous
-            </button>
-            <button type="button" id='epilogue-restart' data-action="exit" class="bordered smooth-button">
-                Restart?
-            </button>
-            <button type="button" id="epilogue-fullscreen-button" data-action="fullscreen" class="bordered smooth-button">
-                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-            </button>
-            <div id="epilogue-debug-group" hidden>
-                <select id="epilogue-skip-scene"></select>
-                <button type="button" id="epilogue-skip" data-action="skip" class="bordered smooth-button green">Skip to Scene</button>
-                <button type="button" id='epilogue-reload' data-action="reload" class="bordered smooth-button red">
-                    Reload Epilogue
+	<div id="epilogue-left-edge"></div>
+	<div id="epilogue-buttons">
+	    <div>
+                <button type="button" id="epilogue-previous" data-action="prev">
+                    <span class="glyphicon glyphicon-step-backward"></span>
                 </button>
-                <button type="button" id='epilogue-exit' data-action="exit" class="bordered smooth-button">
-                    Exit Epilogue
+                <button type="button" id="epilogue-next" data-action="next">
+	            <span class="glyphicon glyphicon-step-forward"></span>
+		</button>
+                <select class="debug" id="epilogue-skip-scene" hidden></select>
+                <button type="button" class="debug" id="epilogue-skip" data-action="skip" aria-hidden="true" hidden>
+	            <span class="glyphicon glyphicon-fast-forward"></span>
                 </button>
-	        </div>
+	    </div>
+	    <div>
+                <button type="button" class="debug" id="epilogue-reload" data-action="reload" aria-hidden="true" hidden>
+	            <span class="glyphicon glyphicon-refresh"></span>
+                </button>
+                <button type="button" id="epilogue-restart" onclick="showRestartModal()">
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                </button>
+                <button type="button" id="epilogue-fullscreen-button" onclick="toggleFullscreen()">
+                    <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+                </button>
+            </div>
         </div>
     </div>
     <!-- End of Epilogue Screen -->
