Prevent players from entering before all characters are loaded
Adds a small loading meter that ensures players don't progress
to the title screen before all character metadata is loaded.

Trying to enter the select screens or the Gallery before all
characters are loaded tends to lead to issues, such as empty
gallery views and empty selection screens.

It's easier to prevent players from progressing to the title
screen entirely, than to make sure that players can't move
to the gallery and selection screens separately from the
title screen before everything is ready.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
 
                 <!-- Start Button -->
                 <div class='title-menu-buttons-container'>
-                    <div class='bordered title-start-edge'>
+                    <div id="warning-load-container">
+                        <span class="game-load-label">Loading: </span>
+                        <span class="game-load-progress">0</span>
+                    </div>
+                    <div id="warning-start-container" class='bordered title-start-edge' hidden>
                         <button id='warning-start-button' class='bordered smooth-button red title-start-button'
                             onclick="enterTitleScreen()">
                             <img class="title-entrance-image" src="img/enter.png" alt="Enter the Inventory" />
