Feedback: Indicate when feedback is disabled
Adds a warning message when leaving feedback for characters
that have feedback disabled.

This should be a softer alternative to a1d24e4e74, that avoids
the issues associated with completely disabling feedback for
characters whose creators may have forgotten to enable feedback
reporting, while making it clear why feedback may not be relayed
to Discord for those characters.

--- a/index.html
+++ b/index.html
@@ -1712,6 +1712,7 @@
                                         </h3>
                                         <p class="feedback-message"></p>
                                     </div>
+                                    <h3 id="feedback-disabled-warning" style="display:none">Feedback is disabled for this character. Their creator(s) may not be able to see your comments.</h3>
                                     <div class="form-group">
                                         <label for="feedback-report-desc">Feedback (required):</label>
                                         <textarea class="form-control" id="feedback-report-desc" rows="5"
