--- a/index.html
+++ b/index.html
@@ -3196,10 +3196,13 @@
                     <button type="button" class="debug" id="epilogue-reload" data-action="reload" aria-hidden="true" hidden>
                         <span class="glyphicon glyphicon-refresh"></span>
                     </button>
-                    <button type="button" id="epilogue-restart" onclick="showRestartModal()">
+                    <button type="button" id="epilogue-bug-report-button" data-action="bug">
+                        <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
+                    </button>
+                    <button type="button" id="epilogue-restart" data-action="exit">
                         <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                     </button>
-                    <button type="button" id="epilogue-fullscreen-button" onclick="toggleFullscreen()">
+                    <button type="button" id="epilogue-fullscreen-button" data-action="fullscreen">
                         <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
                     </button>
                 </div>
