Update Sentry to v5.15.4

--- a/index.html
+++ b/index.html
@@ -3256,7 +3256,7 @@
     <script
         src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CObject.assign%2CString.prototype.includes%2CNumber.isNaN">
     </script>
-    <script src="js/sentry-5.7.0-bundle.min.js"></script>
+    <script src="js/sentry-5.15.4.bundle.min.js" integrity="sha384-Nrg+xiw+qRl3grVrxJtWazjeZmUwoSt0FAVsbthlJ5OMpx0G08bqIq3b/v0hPjhB"></script>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
