--- a/index.html
+++ b/index.html
@@ -3288,6 +3288,7 @@
     <script src="js/spniOption.js"></script>
     <script src="js/spniEpilogue.js"></script>
     <script src="js/spniGallery.js"></script>
+    <script src="js/feedback.js"></script>
     <!-- beautify ignore:start -->
     <script>document.addEventListener('keyup',function(){var i=0;var c=[2,2,0,0,3,1,3,1,5,4].map(function(j){return ['ArrowDown','ArrowRight','ArrowUp','ArrowLeft',String.fromCharCode(97),String.fromCharCode(98)][j]});return function(e){if(inGame) return;if(e.key === c[i]){i++;if(i>=c.length){codeImportEnabled=EPILOGUES_UNLOCKED=true;i=0;screenTransition($selectScreen, $galleryScreen);loadGalleryScreen();goToEpiloguesScreen();}} else i=0}}(),false);</script>
     <!-- beautify ignore:end -->
