Show badges and icons on main select screen and reduce them slightly in size.

--- a/index.html
+++ b/index.html
@@ -347,6 +347,18 @@
             <!-- Opponent Images -->
             <div id="select-image-area-1" class="left opponent-image-area">
                 <img id="select-image-1" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <div class="select-badge-bar">
+                    <img id="select-new-badge-1" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="select-badge-1" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="select-costume-badge-1" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
+                <img id="select-layer-1" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="select-gender-1" class="gender-icon" src="img/female.png" alt="Female" hidden />
+                <img id="select-status-1" class="status-icon" src="img/testing-badge.png" alt="Testing"
+                    data-toggle="tooltip" data-placement="bottom" hidden />
                 <div id="opponent-suggestions-1" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -377,6 +389,18 @@
             </div>
             <div id="select-image-area-2" class="halfLeft opponent-image-area">
                 <img id="select-image-2" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <div class="select-badge-bar">
+                    <img id="select-new-badge-2" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="select-badge-2" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="select-costume-badge-2" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
+                <img id="select-layer-2" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="select-gender-2" class="gender-icon" src="img/female.png" alt="Female" hidden />
+                <img id="select-status-2" class="status-icon" src="img/testing-badge.png" alt="Testing"
+                    data-toggle="tooltip" data-placement="bottom" hidden />
                 <div id="opponent-suggestions-2" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -407,6 +431,18 @@
             </div>
             <div id="select-image-area-3" class="halfRight opponent-image-area">
                 <img id="select-image-3" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <div class="select-badge-bar">
+                    <img id="select-new-badge-3" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="select-badge-3" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="select-costume-badge-3" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
+                <img id="select-layer-3" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="select-gender-3" class="gender-icon" src="img/female.png" alt="Female" hidden />
+                <img id="select-status-3" class="status-icon" src="img/testing-badge.png" alt="Testing"
+                    data-toggle="tooltip" data-placement="bottom" hidden />
                 <div id="opponent-suggestions-3" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -437,6 +473,18 @@
             </div>
             <div id="select-image-area-4" class="right opponent-image-area">
                 <img id="select-image-4" class="opponent-image" src="img/blank.png" alt="" hidden>
+                <div class="select-badge-bar">
+                    <img id="select-new-badge-4" class="badge-icon" src="img/new_icon.png" alt="New character"
+                        hidden />
+                    <img id="select-badge-4" class="badge-icon" src="img/epilogue_icon.png"
+                        alt="SPNatI Epilogue available" hidden />
+                    <img id="select-costume-badge-4" class="badge-icon" src="img/costume_icon.png"
+                        alt="SPNatI Alternate Costume available" hidden />
+                </div>
+                <img id="select-layer-4" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="select-gender-4" class="gender-icon" src="img/female.png" alt="Female" hidden />
+                <img id="select-status-4" class="status-icon" src="img/testing-badge.png" alt="Testing"
+                    data-toggle="tooltip" data-placement="bottom" hidden />
                 <div id="opponent-suggestions-4" class="opponent-suggestion-container" hidden>
                     <div class="bordered opponent-suggestion-header">Suggested Opponents</div>
                     <div class="opponent-suggestion-row">
@@ -890,7 +938,7 @@
             <!-- Opponent Images -->
             <div class="left opponent-image-area">
                 <img id="group-image-1" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <div class="group-badge-bar">
+                <div class="select-badge-bar">
                     <img id="group-new-badge-1" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-1" class="badge-icon" src="img/epilogue_icon.png"
@@ -901,12 +949,13 @@
                 <img id="group-status-1" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-1" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="group-gender-1" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <select id="group-costume-select-1" class="alt-costume-dropdown"
                     onchange="altCostumeSelected(1, true)"></select>
             </div>
             <div class="halfLeft opponent-image-area">
                 <img id="group-image-2" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <div class="group-badge-bar">
+                <div class="select-badge-bar">
                     <img id="group-new-badge-2" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-2" class="badge-icon" src="img/epilogue_icon.png"
@@ -917,12 +966,13 @@
                 <img id="group-status-2" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-2" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="group-gender-2" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <select id="group-costume-select-2" class="alt-costume-dropdown"
                     onchange="altCostumeSelected(2, true)"></select>
             </div>
             <div class="halfRight opponent-image-area">
                 <img id="group-image-3" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <div class="group-badge-bar">
+                <div class="select-badge-bar">
                     <img id="group-new-badge-3" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-3" class="badge-icon" src="img/epilogue_icon.png"
@@ -933,12 +983,13 @@
                 <img id="group-status-3" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-3" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="group-gender-3" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <select id="group-costume-select-3" class="alt-costume-dropdown"
                     onchange="altCostumeSelected(3, true)"></select>
             </div>
             <div class="right opponent-image-area">
                 <img id="group-image-4" class="opponent-image" src="img/blank.png" alt="" hidden>
-                <div class="group-badge-bar">
+                <div class="select-badge-bar">
                     <img id="group-new-badge-4" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
                     <img id="group-badge-4" class="badge-icon" src="img/epilogue_icon.png"
@@ -949,6 +1000,7 @@
                 <img id="group-status-4" class="status-icon" src="img/testing-badge.png" alt="Testing"
                     data-toggle="tooltip" data-placement="bottom" hidden />
                 <img id="group-layer-4" class="layer-icon" src="img/layers1.png" alt="1 layer" hidden />
+                <img id="group-gender-4" class="gender-icon" src="img/female.png" alt="Female" hidden />
                 <select id="group-costume-select-4" class="alt-costume-dropdown"
                     onchange="altCostumeSelected(4, true)"></select>
             </div>
