--- a/editor source/SPNATI Character Editor/VersionHistory/v5.6.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.6.html
@@ -4,9 +4,16 @@
 	<li>Tag definitions have been moved into tag_dictionary.xml in the opponents folder. This will allow mods to update available tags without requiring a new editor release.</li>
 </ul>
 
+<h3>Dashboards</h3>
+<ul>
+	Added a selection box to the Source Material dashboard to include more groups to compare to. For instance, by default Florina shows Fire Emblem: Blazing Blade characters, but the selection box will allow showing all Fire Emblem characters.
+</ul>
+
 <h3>Dialogue</h3>
 <ul>
 	<li>A "Prompt" category has been added when calling out situations. This is intended for lines where the character is asking the others a question, making a request, or otherwise soliticing feedback.</li>
+	<li>Added Player > Distance to test the number of slots a character is away from yours.</li>
+	<li>Added support for setting multiple markers on a single line along with additional mathematic operations (multiplying, dividing, modulo). Use the advanced markers button next to the marker field to open a table for setting more markers.</li>
 </ul>
 
 <h3>Alternate Skins</h3>
@@ -14,9 +21,14 @@
 	<li>The status field is now visible.</li>
 </ul>
 
+<h3>Epilogues</h3>
+<ul>
+	<li>Added ability to set persistent markers when playing an epilogue, either after finishing a game, viewing from the gallery, or both.</li>
+</ul>
+
 <h3>Miscellaneous</h3>
 <ul>
-	<li>Added a "Goto Line" button to jump to the line with the mispelled word in the dialogue editor.</li>
+	<li>Added a "Goto Line" button in Spell Check to jump to the line with the mispelled word in the dialogue editor.</li>
 	<li>Added Writer and Artist criteria to the Data Analzyer</li>
 </ul>
 
@@ -31,4 +43,9 @@
 	<li>Validator checks for "saying text" that never gets said again. Previously this only checked the pre-5.2 condition format. For performance reasons, these checks only run if the other character has been loaded in the editor during the session, however.</li>
 	<li>Fixed issue where custom tags wouldn't be saved.</li>
 	<li>Tweaked the wording of the "Last Place Loses Hand" recipe to clarify that it can happen even on that player's first loss.</li>
+	<li>Fixed issue where importing a text file would strip away "Play Once" settings from cases.</li>
+	<li>Disallowed entering positions other than "upper", "lower", or "both" for major and important clothing.</li>
+	<li>Changed the color of the filled-in marker icon to make it more obvious when a line has marker data in dark themes.</li>
+	<li>Empty list elements in xml files are now omitted.</li>
+	<li>Improved template positioning of objects like belts when used in an emotion code.</li>
 </ul>
