character status filtering

--- a/editor source/SPNATI Character Editor/VersionHistory/v5.6.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.6.html
@@ -2,6 +2,7 @@
 <ul>
 	<li>A warning banner will display when viewing characters saved in later versions of the editor.</li>
 	<li>Tag definitions have been moved into tag_dictionary.xml in the opponents folder. This will allow mods to update available tags without requiring a new editor release.</li>
+	<li>Incomplete characters are now hidden by default. Which statuses to hide can be configured in the General tab of the Settings.</li>
 </ul>
 
 <h3>Dashboards</h3>
@@ -14,6 +15,7 @@
 	<li>A "Prompt" category has been added when calling out situations. This is intended for lines where the character is asking the others a question, making a request, or otherwise soliticing feedback.</li>
 	<li>Added Player > Distance to test the number of slots a character is away from yours.</li>
 	<li>Added support for setting multiple markers on a single line along with additional mathematic operations (multiplying, dividing, modulo). Use the advanced markers button next to the marker field to open a table for setting more markers.</li>
+	<li>"None" is now available as a speech bubble arrow direction.</li>
 </ul>
 
 <h3>Alternate Skins</h3>
@@ -47,5 +49,6 @@
 	<li>Disallowed entering positions other than "upper", "lower", or "both" for major and important clothing.</li>
 	<li>Changed the color of the filled-in marker icon to make it more obvious when a line has marker data in dark themes.</li>
 	<li>Empty list elements in xml files are now omitted.</li>
+	<li>Fixed issue where setting a persistent marker would keep "persistent" checked for every marker visited subsequently.</li>
 	<li>Improved template positioning of objects like belts when used in an emotion code.</li>
 </ul>
