Add clearer indication that you're at the end of an epilogue.

--- a/index.html
+++ b/index.html
@@ -3196,6 +3196,7 @@
                     <button type="button" class="debug" id="epilogue-skip" data-action="skip" aria-hidden="true" hidden>
                     <span class="glyphicon glyphicon-fast-forward"></span>
                     </button>
+                    <span id="epilogue-end-indicator">End.</span>
                 </div>
                 <div>
                     <button type="button" class="debug" id="epilogue-reload" data-action="reload" aria-hidden="true" hidden>
