Let players access the title screen, but not the select or gallery screens, until all metadata has been loaded.
Because people hate waiting without something to do in the meantime.

What we might want to do is to prevent entry to the title screen until the config and localStorage have been loaded.

I would like to let the player tag button be visible from the start but that messes up the layout.

--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
 
                 <!-- Start Button -->
                 <div class='title-menu-buttons-container'>
-                    <div id="warning-load-container">
-                        <span class="game-load-label">Loading: </span>
-                        <span class="game-load-progress">0</span>
-                    </div>
-                    <div id="warning-start-container" class='bordered title-start-edge' hidden>
+                    <div id="warning-start-container" class='bordered title-start-edge'>
                         <button id='warning-start-button' class='bordered smooth-button red title-start-button'
                             onclick="enterTitleScreen()">
                             <img class="title-entrance-image" src="img/enter.png" alt="Enter the Inventory" />
@@ -245,14 +241,18 @@
 
                 <!-- Start Button -->
                 <div class='title-menu-buttons-container'>
-                    <div class='bordered title-gallery-edge'>
+                    <div id="title-load-container">
+                        <span class="game-load-label">Loading: </span>
+                        <span class="game-load-progress">0</span>
+                    </div>
+                    <div class='bordered title-gallery-edge' hidden>
                         <button
                             class='bordered smooth-button red centered-icon-button title-menu-button title-gallery-button'
                             onclick="loadGalleryScreen()">
                             <img class="centered-icon-image" src="img/gallery.svg" alt="Gallery" />
                         </button>
                     </div>
-                    <div class='bordered title-start-edge'>
+                    <div class='bordered title-start-edge' hidden>
                         <button id='title-start-button'
                             class='bordered smooth-button red centered-icon-button title-start-button'
                             onclick="validateTitleScreen()">
@@ -260,7 +260,7 @@
                                 alt="Enter the Inventory" />
                         </button>
                     </div>
-                    <div class='bordered title-tags-edge'>
+                    <div class='bordered title-tags-edge' hidden>
                         <button
                             class='bordered smooth-button red centered-icon-button title-menu-button title-tags-button'
                             onclick="showPlayerTagsModal()">
