--- a/editor source/SPNATI Character Editor/VersionHistory/v5.7.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.7.html
@@ -1,6 +1,12 @@
 ﻿<h3>Dialogue</h3>
 <ul>
 	<li>There is now a Dialogue setting to auto-fill available stages when opening the "Select Images Per Stage" form (the chevron button next to a line's image).</li>
+	<li>Added background reference to the References section sidebar which lets you review a game background's attributes (location, time, temperature, etc.)</li>
+</ul>
+
+<h3>Dashboards</h3>
+<ul>
+	<li>The franchise comparison dashboard will now remember what the last franchise was and default to that next time.</li>
 </ul>
 
 <h3>Pose Matrix</h3>
@@ -17,10 +23,19 @@ Introducing the Pose Matrix tab. This tool provides another optional method for 
 	<li>See the tutorial at <a href="" target="_blank">link</a> for more information or refer to the <a href="../Help/poses.html#matrix" target="_blank">help</a> documentation.</li>
 </ul>
 
+<h3>Settings</h3>
+<ul>
+	<li>Added an option to hide the warning banner when viewing an incomplete character.</li>
+</ul>
+
 <h3>Bug Fixes</h3>
 <ul>
 	<li>The "Select Images Per Stage" popup no longer auto-fills in every possible pose.</li>
 	<li>Added scrollbars to the "Select Images Per Stage" popup when needed, and fixed its window sizing cutting off the OK/cancel buttons.</li>
 	<li>It's now possible to delete poses from the "Select Images Per Stage" popup by unchecking everything in that row. Previously a row with nothing checked would be used for every stage.</li>
 	<li>Fixed issue where deleting a case that had misspelled words would still show those words in Spell Check.</li>
+	<li>Responding to a "Must Masturbate (Self, First)" case will now create a slightly more space-efficient "0 not still in game" condition instead of "0 finished + 0 masturbating".</li>
+	<li>"Total Playing" condition has been renamed to "# Players Still in Game" to be clear it refers to the number that has not yet forfeited vs the number of players at the table.</li>
+	<li>Total Exposed, Total Naked, Total Masturbating, and Total Finished conditions have been renamed to "# Players ..."</li>
+	<li>Fixed crash when encountering an unrecognized listing status.</li>
 </ul>
