--- a/editor source/SPNATI Character Editor/VersionHistory/v5.7.html
+++ b/editor source/SPNATI Character Editor/VersionHistory/v5.7.html
@@ -20,7 +20,7 @@ Introducing the Pose Matrix tab. This tool provides another optional method for 
 	<li>Templating support. Like templates, you can optionally assign a base appearance code, stage codes for clothing, and poses for each emotion, and it'll combine these into the proper clothing + emotion for each stage when importing. This lets you update a pose across all stages or a stage's clothing across all poses without manually updating each one.</li>
 	<li>Like Pose Lists, provides buttons for bulk reimporting of all images in the matrix or importing only those whose files haven't been created yet.</li>
 	<li>Creation from templates and/or pose lists. The Pose List and Template tabs contain "Add to Matrix" buttons to load a pose list or template into the matrix.</li>
-	<li>See the tutorial at <a href="" target="_blank">link</a> for more information or refer to the <a href="../Help/poses.html#matrix" target="_blank">help</a> documentation.</li>
+	<li>See the tutorial at <a href="https://www.youtube.com/watch?v=tzETssGeaEQ" target="_blank">link</a> for more information or refer to the <a href="../Help/poses.html#matrix" target="_blank">help</a> documentation.</li>
 </ul>
 
 <h3>Settings</h3>
