Vectorize as circles and lines instead, vectorize the any/all icons as well, add nominal size attribute, and actually replace the PNGs in the game.
The main reason for doing this is that it was suggested that the epilogue badges include gender icons to indicate when you need to switch genders to unlock them.

Note that in addition to looking cleaner, the SVG versions use a consistent stroke width (10% of the canvas size), which the PNGs didn't; the circles where slightly thinner.

This also moves the alt texts in the Epilogue gallery to the title attributes so that they might be seen.

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                 <div class="title-gender-size-container">
                     <!-- Player Gender -->
                     <input type='image' id='male-gender-button'
-                        class='bordered title-content-button title-gender-button' src='img/male.png' alt="Male"
+                        class='bordered title-content-button title-gender-button' src='img/male.svg' alt="Male"
                         onclick='changePlayerGender("male")'>
                     <input type='image' id='female-gender-button'
-                        class='bordered title-content-button title-gender-button' src='img/female.png' alt="Female"
+                        class='bordered title-content-button title-gender-button' src='img/female.svg' alt="Female"
                         onclick='changePlayerGender("female")'>
 
                     <!-- Player Male Size -->
@@ -1119,14 +1119,14 @@
                 <option value="">(no filter)</option>
             </select>
             <div id="gallery-gender-block">
-                <input type="image" id="gallery-gender-all" class="gallery-gender-button bordered" src='img/all.png'
-                    alt="All epilogues" onclick="galleryGender('all')" />
-                <input type="image" id="gallery-gender-any" class="gallery-gender-button bordered" src='img/any.png'
-                    alt="For either gender" style="opacity:0.4;" onclick="galleryGender('any')" />
-                <input type="image" id="gallery-gender-male" class="gallery-gender-button bordered" src='img/male.png'
-                    alt="For males" style="opacity:0.4;" onclick="galleryGender('male')" />
+              <input type="image" id="gallery-gender-all" class="gallery-gender-button bordered"
+		    src="img/all.svg" alt="&#x26A5;&#x2640;&#x2642;" title="All epilogues" onclick="galleryGender('all')" />
+                <input type="image" id="gallery-gender-any" class="gallery-gender-button bordered"
+		    src="img/any.svg" alt="&#x26A5;" title="For either gender" style="opacity:0.4;" onclick="galleryGender('any')" />
+                <input type="image" id="gallery-gender-male" class="gallery-gender-button bordered"
+		    src="img/male.svg" alt="&#x2642;" title="For males" style="opacity:0.4;" onclick="galleryGender('male')" />
                 <input type="image" id="gallery-gender-female" class="gallery-gender-button bordered"
-                    src="img/female.png" alt="For females" style="opacity:0.4;" onclick="galleryGender('female')" />
+                    src="img/female.svg" alt="&#x2640;" title="For females" style="opacity:0.4;" onclick="galleryGender('female')" />
             </div>
             <div id="gallery-endings-block">
                 <div class="gallery-ending" onclick="selectEnding(0)"></div>
