--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,7 @@
               <input type="image" id="gallery-gender-all" class="gallery-gender-button bordered"
 		    src="img/all.svg" alt="&#x26A5;&#x2640;&#x2642;" title="All epilogues" onclick="galleryGender('all')" />
                 <input type="image" id="gallery-gender-any" class="gallery-gender-button bordered"
-		    src="img/any.svg" alt="&#x26A5;" title="For either gender" style="opacity:0.4;" onclick="galleryGender('any')" />
+		    src="img/any.svg" alt="&#x26A5;" title="For either gender (gender-neutral)" style="opacity:0.4;" onclick="galleryGender('any')" />
                 <input type="image" id="gallery-gender-male" class="gallery-gender-button bordered"
 		    src="img/male.svg" alt="&#x2642;" title="For males" style="opacity:0.4;" onclick="galleryGender('male')" />
                 <input type="image" id="gallery-gender-female" class="gallery-gender-button bordered"
