Show badges with different icons depending on what epilogue conditions are not met, along with tooltips.
On the main selection screen, show a clear warning when no (new) epilogue will be unlockable.

Makes getOpponentEpilogueStatus() an Opponent method and fixes it so that it will actually suggest completing an alsoPlaying requirement before switching genders (I think that's what was meant by "matching gender requirements first").

TODO: Make all the tooltips actually work, plus change the NEW and Costume badges.

--- a/index.html
+++ b/index.html
@@ -311,22 +311,22 @@
 
             <div id="selection-badge-row-1" class="left selection-badge-row">
                 <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
-                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
             <div id="selection-badge-row-2" class="halfLeft selection-badge-row">
                 <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
-                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
             <div id="selection-badge-row-3" class="halfRight selection-badge-row">
                 <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
-                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
             <div id="selection-badge-row-4" class="right selection-badge-row">
                 <img data-badge="new" class="badge-icon" src="img/new_icon.png" alt="New character" style="display:none;"/>
-                <img data-badge="epilogue" class="badge-icon" src="img/epilogue_icon.png" alt="SPNatI Epilogue available" style="display:none;"/>
+                <img data-badge="epilogue" class="badge-icon epilogue-badge" src="img/epilogue.svg" alt="SPNatI Epilogue available" style="display:none;"/>
                 <img data-badge="costume" class="badge-icon" src="img/costume_icon.png" alt="SPNatI Alternate Costume available" style="display:none;"/>
             </div>
 
@@ -350,7 +350,7 @@
                 <div class="select-badge-bar">
                     <img id="select-new-badge-1" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="select-badge-1" class="badge-icon" src="img/epilogue_icon.png"
+                    <img id="select-badge-1" class="badge-icon epilogue-badge" src="img/epilogue.svg"
                         alt="SPNatI Epilogue available" hidden />
                     <img id="select-costume-badge-1" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
@@ -392,7 +392,7 @@
                 <div class="select-badge-bar">
                     <img id="select-new-badge-2" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="select-badge-2" class="badge-icon" src="img/epilogue_icon.png"
+                    <img id="select-badge-2" class="badge-icon epilogue-badge" src="img/epilogue.svg"
                         alt="SPNatI Epilogue available" hidden />
                     <img id="select-costume-badge-2" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
@@ -434,7 +434,7 @@
                 <div class="select-badge-bar">
                     <img id="select-new-badge-3" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="select-badge-3" class="badge-icon" src="img/epilogue_icon.png"
+                    <img id="select-badge-3" class="badge-icon epilogue-badge" src="img/epilogue.svg"
                         alt="SPNatI Epilogue available" hidden />
                     <img id="select-costume-badge-3" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
@@ -476,7 +476,7 @@
                 <div class="select-badge-bar">
                     <img id="select-new-badge-4" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="select-badge-4" class="badge-icon" src="img/epilogue_icon.png"
+                    <img id="select-badge-4" class="badge-icon epilogue-badge" src="img/epilogue.svg"
                         alt="SPNatI Epilogue available" hidden />
                     <img id="select-costume-badge-4" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
@@ -941,8 +941,8 @@
                 <div class="select-badge-bar">
                     <img id="group-new-badge-1" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="group-badge-1" class="badge-icon" src="img/epilogue_icon.png"
-                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-badge-1" class="badge-icon epilogue-badge" src="img/epilogue.svg"
+                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" data-container="#group-image-1" hidden />
                     <img id="group-costume-badge-1" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
@@ -958,8 +958,8 @@
                 <div class="select-badge-bar">
                     <img id="group-new-badge-2" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="group-badge-2" class="badge-icon" src="img/epilogue_icon.png"
-                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-badge-2" class="badge-icon epilogue-badge" src="img/epilogue.svg"
+                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" hidden />
                     <img id="group-costume-badge-2" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
@@ -975,8 +975,8 @@
                 <div class="select-badge-bar">
                     <img id="group-new-badge-3" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="group-badge-3" class="badge-icon" src="img/epilogue_icon.png"
-                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-badge-3" class="badge-icon epilogue-badge" src="img/epilogue.svg"
+                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" hidden />
                     <img id="group-costume-badge-3" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
@@ -992,8 +992,8 @@
                 <div class="select-badge-bar">
                     <img id="group-new-badge-4" class="badge-icon" src="img/new_icon.png" alt="New character"
                         hidden />
-                    <img id="group-badge-4" class="badge-icon" src="img/epilogue_icon.png"
-                        alt="SPNatI Epilogue available" hidden />
+                    <img id="group-badge-4" class="badge-icon epilogue-badge" src="img/epilogue.svg"
+                        alt="SPNatI Epilogue available" data-toggle="tooltip" data-placement="right" hidden />
                     <img id="group-costume-badge-4" class="badge-icon" src="img/costume_icon.png"
                         alt="SPNatI Alternate Costume available" hidden />
                 </div>
